--- a/src/sass/pages/_news.scss
+++ b/src/sass/pages/_news.scss
@@ -1,4 +1,3 @@
-
 .mfp-close-btn-in .mfp-close {
     top: 1rem;
     right: 1rem;
@@ -9,6 +8,167 @@
     border-radius: 50%;
     line-height: normal;
 }
+.post-holder {
+    .modal-content {
+        .darkmode--activated & {
+            background: #353535;
+        }
+    }
+    .modal-header {
+        .darkmode--activated & {
+            background: #353535;
+            color: #ccc;
+            border-color: #555;
+        }
+        .close {
+            .darkmode--activated & {
+                color: #ccc;
+            }
+        }
+    }
+    .modal-body {
+        .darkmode--activated & {
+            background: #353535;
+            color: #ccc;
+        }
+    }
+    .modal-title {
+        font-family: "Poppins", sans-serif;
+    }
+    .create-post {
+        .darkmode--activated & {
+            background: #353535;
+        }
+    }
+    .post-input {
+        .add-media {
+            .media {
+                position: relative;
+                display: none;
+                width: 100%;
+                height: 200px;
+                margin-bottom: 0.5rem;
+                overflow: hidden;
+                img {
+                    width: 100%;
+                    height: 100%;
+                    object-fit: contain;
+                }
+                .close-preview {
+                    position: absolute;
+                    top: 0;
+                    right: 0;
+                    z-index: 5;
+                    background: #F6F6F6;
+                    border: none;
+                    padding: 0;
+                    .darkmode--activated & {
+                        background: #222;
+                        color: #ccc;
+                    }
+                    span {
+                        display: inline-block;
+                        vertical-align: middle;
+                    }
+                }
+            }
+            input[type="file"] {
+                position: absolute;
+                clip: rect(0 0 0 0);
+                overflow: hidden;
+                opacity: 0;
+            }
+            label {
+                cursor: pointer;
+                font-size: 0.85rem;
+                display: block;
+                & > * {
+                    display: inline-block;
+                    vertical-align: middle;
+                }
+                .icon {
+                    flex-shrink: 0;
+                    color: #45BD62;
+                    margin-right: 0.3rem;
+                }
+            }
+        }
+        button.submit {
+            display: block;
+            width: 100%;
+            border: none;
+            border-radius: 5px;
+            padding: 0.5rem;
+            text-align: center;
+            background: #8EA946;
+            color: #fff;
+        }
+        textarea {
+            &:focus {
+                background: transparent !important;
+            }
+            .darkmode--activated & {
+                background: #353535;
+                color: #ccc;
+            }
+        }
+    }
+}
+.create-post {
+    display: flex;
+    align-items: center;
+    background: #fff;
+    padding: 1rem;
+    .darkmode--activated & {
+        background: #000;
+    }
+    .author__img {
+        flex-shrink: 0;
+        margin-right: 0.7rem;
+        a {
+            display: block;
+            width: 45px;
+            height: 45px;
+            border-radius: 50%;
+            padding: 0.2rem;
+            background: #F2F2F2;
+            overflow: hidden;
+            .darkmode--activated & {
+                background: #2b2b2b;
+            }
+            img {
+                width: 100%;
+                height: 100%;
+                border-radius: 50%;
+                object-fit: cover;
+            }
+        }
+    }
+    .post-btn {
+        button {
+            background: #f2f2f2;
+            color: #242424;
+            border: none;
+            border-radius: 25px;
+            padding: 0.5rem 1rem;
+            min-width: 350px;
+            text-align: left;
+            .darkmode--activated & {
+                background: #353535;
+                color: #ccc;
+            }
+            @media (max-width: 767px) {
+                min-width: auto;
+            }
+        }
+    }
+    .author__name h6 {
+        font-family: "Poppins", sans-serif;
+        .darkmode--activated & {
+            color: #ccc;
+        }
+    }
+}
 section.news-feed {
     margin-top: 4rem;
     &.ajax-popup {
@@ -17,9 +177,9 @@ section.news-feed {
             width: 100%;
             height: 100%;
             overflow: hidden;
-            img, iframe {
+            img {
                 width: 100%;
-                min-height: 60vh;
+                min-height: 70vh;
                 max-height: 100vh;
                 object-fit: cover;
             }
@@ -33,6 +193,10 @@ section.news-feed {
         border-radius: 10px;
         padding: 1rem;
         margin-bottom: 1.5rem;
+        .darkmode--activated & {
+            background: #353535;
+            color: #ccc;
+        }
         .author {
             display: flex;
             align-items: center;
@@ -45,6 +209,9 @@ section.news-feed {
                 padding: 3px;
                 background: #f7f7f7;
                 overflow: hidden;
+                .darkmode--activated & {
+                    background: #222;
+                }
                 img {
                     width: 100%;
                     height: 100%;
@@ -63,6 +230,9 @@ section.news-feed {
                     margin: 0;
                     font-size: 1rem;
                     font-weight: 500;
+                    .darkmode--activated & {
+                        color: #ccc;
+                    }
                     a {
                         color: inherit;
                     }
@@ -99,6 +269,9 @@ section.news-feed {
             border: 1px solid rgba($color: #000000, $alpha: 0.2);
             border-left: 0;
             border-right: 0;
+            .darkmode--activated & {
+                border-color: #444444;
+            }
             span.icon {
                 display: inline-block;
                 vertical-align: middle;
@@ -123,6 +296,9 @@ section.news-feed {
                 border: none;
                 outline: none;
                 background: none;
+                .darkmode--activated & {
+                    color: #ccc;
+                }
             }
             span {
                 display: inline-block;
@@ -142,6 +318,9 @@ section.news-feed {
                 outline: none;
                 background: none;
                 font-size: 0.9rem;
+                .darkmode--activated & {
+                    color: #ccc;
+                }
                 @media (max-width: 400px) {
                     font-size: 0.8rem;
                 }
@@ -151,6 +330,9 @@ section.news-feed {
                     font-size: 1.1rem;
                     margin-right: 0.3rem;
                     color: #616161;
+                    .darkmode--activated & {
+                        color: #ccc;
+                    }
                     @media (max-width: 400px) {
                         font-size: 0.75rem;
                     }
@@ -198,6 +380,10 @@ section.news-feed {
                 background: #f0f2f5;
                 padding: 0.5rem 0.8rem;
                 border-radius: 20px;
+                .darkmode--activated & {
+                    background: #222;
+                    color: #ccc;
+                }
                 h6 {
                     font-family: "Poppins", sans-serif;
                     font-weight: 500;
@@ -206,6 +392,9 @@ section.news-feed {
                     font-size: 0.9rem;
                     margin: 0;
                     color: #494949;
+                    .darkmode--activated & {
+                        color: #808080;
+                    }
                 }
             }
             &--input {
@@ -216,6 +405,9 @@ section.news-feed {
                     padding: 0;
                     background: none;
                     border: none !important;
+                    .darkmode--activated & {
+                        color: #ccc;
+                    }
                 }
             }
         }
