--- a/src/sass/partials/_global.scss
+++ b/src/sass/partials/_global.scss
@@ -13,6 +13,9 @@ body {
 	position: relative;
 	margin-top: 2rem;
 }
+textarea {
+	resize: none;
+}
 .darkmode--activated .container {
 	background: $darkColor !important;
 }
