--- a/src/sass/pages/_news.scss
+++ b/src/sass/pages/_news.scss
@@ -114,6 +114,55 @@
         }
     }
 }
+.likes-holder {
+    .modal-content {
+        .darkmode--activated & {
+            background: #353535;
+        }
+    }
+    .modal-header {
+        .darkmode--activated & {
+            border-color: #555;
+        }
+        .close {
+            color: #555;
+        }
+    }
+    ul li {
+        display: flex;
+        align-items: center;
+        margin-bottom: 0.7rem;
+        a.avatar {
+            flex-shrink: 0;
+            display: block;
+            width: 45px;
+            height: 45px;
+            border-radius: 50%;
+            padding: 0.3rem;
+            margin-right: 0.5rem;
+            background: #F2F2F2;
+            overflow: hidden;
+            .darkmode--activated & {
+                background: #444;
+            }
+            img {
+                width: 100%;
+                height: 100%;
+                border-radius: 50%;
+                object-fit: cover;
+            }
+        }
+        h6.name {
+            font-family: "Poppins", sans-serif;
+            a {
+                color: inherit;
+            }
+            .darkmode--activated & {
+                color: #ccc;
+            }
+        }
+    }
+}
 .create-post {
     display: flex;
     align-items: center;
@@ -307,6 +356,37 @@ section.news-feed {
                 font-size: 0.95rem;
                 @media (max-width: 400px) {
                     font-size: 0.75rem;
+                }
+            }
+            .likes-list-btn {
+                position: relative;
+                .summary-likes {
+                    position: absolute;
+                    top: calc(100% + .3rem);
+                    left: 50%;
+                    transform: translateX(-50%);
+                    background: rgba(#000, .7);
+                    border-radius: 7px;
+                    padding: 0.5rem;
+                    width: 120px;
+                    display: none;
+                    cursor: auto;
+                    .darkmode--activated & {
+                        background: rgba(#fff, .7);
+                    }
+                    li {
+                        text-align: left;
+                        font-size: 0.8rem;
+                        color: #fff;
+                        line-height: 1.5;
+                        text-decoration: underline;
+                        .darkmode--activated & {
+                            color: #000;
+                        }
+                    }
+                }
+                &:hover .summary-likes {
+                    display: block;
                 }
             }
         }
