--- a/src/sass/pages/_index.scss
+++ b/src/sass/pages/_index.scss
@@ -1,3 +1,37 @@
+#splash-screen {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background: #fff;
+  z-index: 999999;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  transition: .5s;
+  lottie-player {
+    flex-shrink: 0;
+    width: 300px;
+    height: 300px;
+    margin-top: -7rem;
+    background: transparent;
+  }
+  .slogan {
+    display: block;
+    text-transform: uppercase;
+    letter-spacing: 8px;
+    font-weight: 500;
+    font-size: 0.85rem;
+    margin-top: -3rem;
+    color: $mainColor;
+  }
+  &.hide {
+    opacity: 0;
+  }
+}
 .hero {
   .container {
     .inner-hero {
