--- a/src/sass/pages/_news.scss
+++ b/src/sass/pages/_news.scss
@@ -59,7 +59,7 @@
                     top: 0;
                     right: 0;
                     z-index: 5;
-                    background: #F6F6F6;
+                    background: #f6f6f6;
                     border: none;
                     padding: 0;
                     .darkmode--activated & {
@@ -88,7 +88,7 @@
                 }
                 .icon {
                     flex-shrink: 0;
-                    color: #45BD62;
+                    color: #45bd62;
                     margin-right: 0.3rem;
                 }
             }
@@ -100,7 +100,7 @@
             border-radius: 5px;
             padding: 0.5rem;
             text-align: center;
-            background: #8EA946;
+            background: #8ea946;
             color: #fff;
         }
         textarea {
@@ -140,7 +140,7 @@
             border-radius: 50%;
             padding: 0.3rem;
             margin-right: 0.5rem;
-            background: #F2F2F2;
+            background: #f2f2f2;
             overflow: hidden;
             .darkmode--activated & {
                 background: #444;
@@ -180,7 +180,7 @@
             height: 45px;
             border-radius: 50%;
             padding: 0.2rem;
-            background: #F2F2F2;
+            background: #f2f2f2;
             overflow: hidden;
             .darkmode--activated & {
                 background: #2b2b2b;
@@ -219,9 +219,12 @@
     }
 }
 section.news-feed {
-    margin-top: 4rem;
+    width: 100%;
+    max-width: 800px;
+    margin: 4rem auto 0;
     &.ajax-popup {
         margin: 0;
+        max-width: 100%;
         .media {
             width: 100%;
             height: 100%;
@@ -245,6 +248,87 @@ section.news-feed {
         .darkmode--activated & {
             background: #353535;
             color: #ccc;
+        }
+        &.post__score--match {
+            table.match-info {
+                color: inherit;
+                &::-webkit-scrollbar {
+                    width: 3px;
+                }
+                &::-webkit-scrollbar-thumb {
+                    background: $mainColor;
+                    border: none;
+                    border-radius: 0;
+                }
+                &::-webkit-scrollbar-track {
+                    background: #eeeeee;
+                }
+                tr {
+                    border: none;
+                }
+                td {
+                    vertical-align: middle;
+                    &.result-area {
+                        white-space: nowrap;
+                        span {
+                            border: 2px solid $mainColor;
+                            padding: .3rem .5rem;
+                            margin: 0 .2rem;
+                            font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+                        }
+                    }
+                    .box {
+                        min-height: 200px;
+                        width: 320px;
+                        background: #fafafa;
+                        padding: 2rem .7rem;
+                        .darkmode--activated & {
+                            background: #222;
+                        }
+                        .team-title {
+                            text-align: center;
+                            h3 {
+                                display: inline-block;
+                                padding: .4rem .6rem;
+                                border: 2px solid $mainColor;
+                                font-family: "Poppins", sans-serif;
+                                font-size: 1rem;
+                                font-weight: normal;
+                                margin: 0;
+                            }
+                        }
+                        ul li {
+                            display: flex;
+                            justify-content: space-between;
+                            align-items: center;
+                            margin-bottom: 0.7rem;
+                            a {
+                                color: inherit;
+                                img {
+                                    width: 30px;
+                                    height: 30px;
+                                    border-radius: 50%;
+                                    margin-right: .4rem;
+                                }
+                                span {
+                                    font-size: 0.8rem;
+                                }
+                            }
+                            span.rate {
+                                background: $mainColor;
+                                margin-left: 1rem;
+                                font-size: 0.7rem;
+                                font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+                                color: #fff;
+                                padding: .2rem;
+                                font-weight: 300;
+                                border-radius: 5px;
+                                white-space: nowrap;
+                            }
+                        }
+                    }
+                }
+            }
         }
         .author {
             display: flex;
@@ -362,17 +446,17 @@ section.news-feed {
                 position: relative;
                 .summary-likes {
                     position: absolute;
-                    top: calc(100% + .3rem);
+                    top: calc(100% + 0.3rem);
                     left: 50%;
                     transform: translateX(-50%);
-                    background: rgba(#000, .7);
+                    background: rgba(#000, 0.7);
                     border-radius: 7px;
                     padding: 0.5rem;
                     width: 120px;
                     display: none;
                     cursor: auto;
                     .darkmode--activated & {
-                        background: rgba(#fff, .7);
+                        background: rgba(#fff, 0.7);
                     }
                     li {
                         text-align: left;
